Wed Nov 13 17:09:45 2013  Zachary Scott  <e@zzak.io>

	* ext/openssl/lib/openssl/*.rb: [DOC] Document the following:

	  - Integer#to_bn
	  - OpenSSL::Buffering module
	  - Deprecated OpenSSL::Digest::Digest compatibility class
	  - OpenSSL::Config

	  These changes were based on a patch by @vbatts via GH-436
	  https://github.com/ruby/ruby/pull/436

Wed Nov 13 10:55:43 2013  Zachary Scott  <e@zzak.io>

	* doc/regexp.rdoc: [DOC] Fix typo in Special global variables section.
	  Reported by Alex Johnson on ruby-doc.org

Wed Nov 13 10:43:19 2013  Zachary Scott  <e@zzak.io>

	* hash.c: [DOC] Adds an example for Hash#store

Wed Nov 13 09:03:40 2013  Zachary Scott  <e@zzak.io>

	* doc/regexp.rdoc: [DOC] add note about Bug #4044 as suggested by
	  duerst-san in [ruby-core:43612] [Fixes GH-443] Patched by @rosenfeld
	  https://github.com/ruby/ruby/pull/443

Tue Nov 12 10:15:14 2013  Eric Hodel  <drbrain@segment7.net>

	* test/rubygems/insure_session.rb:  Remove unused test file.

Tue Nov 12 09:16:24 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master b9213d7.  Changes include:

	  Fixed tests on Windows (I hope) by forcing platform for
	  platform-dependent tests.

	  Fixed File.exists? warnings.

	  Improved testing infrastructure.

	* test/rubygems:  ditto.

	* test/rdoc/test_rdoc_rubygems_hook.rb:  Switch to util_spec like
	  RubyGems.

Mon Nov 11 18:31:12 2013  Aman Gupta <ruby@tmm1.net>

	* internal.h: move common string/hash flags to include file.
	* ext/objspace/objspace_dump.c: remove flags shared above.
	* hash.c: ditto.
	* string.c: ditto.

Mon Nov 11 04:36:14 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/specification.rb:  Include 2.2.0.preview.2 when checking
	  if extensions should be built.  Fixes a ruby-ci failure.
	* test/rubygems/test_gem_specification.rb:  Test for the above.

Mon Nov 11 03:15:56 2013  Koichi Sasada  <ko1@atdot.net>

	* vm_trace.c (symbol2event_flag): add secret feature.