@@ -1,3 +1,7 @@
+Wed Nov 13 17:19:36 2013  Zachary Scott  <e@zzak.io>
+
+	* ext/openssl/lib/openssl/config.rb: In #parse use +string+ for +str+
+
 Wed Nov 13 17:09:45 2013  Zachary Scott  <e@zzak.io>
 
 	* ext/openssl/lib/openssl/*.rb: [DOC] Document the following:
